<resources>
    <string name="app_name">TrialMonster</string>
    <string name="add_word">Add word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="hint_trial_name">Name…</string>
    <string name="hint_trial_club">Club…</string>
    <string name="hint_trial_date">Date…</string>
    <string name="hint_trial_location">Location…</string>
    <string name="club_name">Club</string>
    <string name="trial_name">Trial name</string>
    <string name="venue_name">Venue</string>
    <string name="event_date">Date</string>
    <string name="rider">Rider</string>
    <string name="machine">Machine</string>
    <string name="riderclass">Class</string>
    <string name="total">Total</string>
    <string name="cleans">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="missed">M</string>
    <string name="message">Loading data…</string>
    <string name="list_of_trials">The screen displays a list of the trials available for display</string>
    <string name="list_of_results">This view shows a list of scores for one event</string>
    <string name="sections_scores">|0000|0000|0000|1010|0000|0000|0000|1010|</string>
    <string name="section_scores">Section scores</string>
    <string name="coming_up">Coming up…</string>
    <string name="list_of_trials_coming_up">coming_up</string>
    <string name="dummy"><![CDATA[Your long text here]]></string>
    <string name="reg_template"><![CDATA[<p><b>Darwen Trials Club - Affiliated to ACU</b><br>Supplementary Regulations for Novice Beginner Series - Event 1<br><strong>PERMIT No.:</strong> ACU62342<br><strong>DATE No.:</strong> 19th February, 2022<br><strong>VENUE:</strong> Sweetwell House Farm, Todmorden Road, Briercliffe, Burnley</p> <p><strong>ANNOUNCEMENT:</strong> Darwen Trials Club will organise a Closed to Club Trial for solo motorcycles, held under the National Sporting Code, Standing Regulations of the ACU, the North Western Centre Rules current at the time, the following Supplementary Regulations and any Final Instructions issued for the meeting. In addition the event will follow the guidelines contained within the current Covid 19 Trials Risk Assessment.<br />Please take the time to carefully read any specific Safety Procedures produced by Darwen Trials Club which form part of the Supplementary Regulations. There will also be a Riders Briefing which all riders must attend ten minutes before the official start time.</p> <p><strong>ELIGIBILITY:</strong> This trial will be restricted to members of Darwen Trials Club only. All riders and passengers must hold a current ACU/SACU Trials Registration Card or ACU/SACU Competition Licence. Any rider or passenger from another FMN must produce a licence issued by their FMN, together with start permission and proof of personal accident insurance.</p> <p><strong>MACHINES:</strong> Motorcycles as per NSC Appendix D Category 1, Group A1 Solos and TSR 8.</p><p><strong>START / VENUE:</strong>  at Sweetwell House Farm, Todmorden Road, Briercliffe, Burnley -  BB10 3PL</p> <p><strong>DIRECTIONS:</strong>  From the M65 Leave the M65 - Junction 12 - following the A682 towards Nelson and Brierfield. At the first two roundabouts, take the first exit then turn right onto Lomeshaye Road. Take the first right to Hibson Road then left into Halifax Road. This will shortly become Todmorden Road. After a couple of miles, continue into Shay Lane then follow this to Sweetwell Boarding Kennels.  From Holme Chapel After passing through Holme Chapel, leave the A646 on Red Lees Road to your right. Follow this for about a mile, then turn right into Salterford Lane. Follow this for around two miles, then turn right into Shay Lane following this to Sweetwell Boarding Kennels.</p> No practising on this land without the landowner\'s permission.<p><strong>OFFICIALS:</strong> <br />Clerk of the Course: <br />Secretary of the Meeting: (To whom all correspondence regarding this event shall be addressed): Alex Sykes – alex@alexsykes.net<br />Point of Contact for Child Protection Matters: Secretary of the Meeting.</p> <p><strong>ENTRY FEES:</strong> Adult - , Under 16 –  Entries through the ACU online system only. One-Day Licences may be obtained through the online system. Withdrawal of an entry may incur a £3 charge by the ACU.</p> <p><strong>RESULTS:</strong> Will be published on the <a href="http://trialmonster.uk">trialmonster.uk</a> website</p> <p><strong>COURSE:</strong> Will comprise one or more laps of a course all on private land. No practising on this land before or after the event. The number of laps and sections will be announced at a riders’ briefing immediately before the event start.</p> <p><strong>COURSES:</strong> Hard Novice, Novice, 50/50, Easy</p> <p><strong>CLASSES: </strong>Adult, Youth</p> <p><strong>METHOD OF MARKING &amp; TIES:</strong> As per TSR22 Stop Permitted</p> <p><strong>PROTESTS</strong>: Protests by email only as per National Sporting Code of the ACU, section 10.04</p>]]></string>
    <string name="enter">Enter</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="myself">Myself</string>
    <string name="i_am_making_this_entry_for">I am making this entry for</string>
    <string name="someone_else">Someone else</string>
    <string name="email_address">email address</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="entered_by">Entered by</string>
    <string name="acu_registration">ACU Registration</string>
    <string name="button_label_private">Private</string>
    <string name="button_label_team">Team</string>
    <string name="button_label_everyone">Everyone</string>
    <string name="button_label_custom">Nobody</string>
    <string name="adult">Adult</string>
    <string name="youth">Youth</string>
    <string name="pick_date">Pick date</string>
    <string name="Date_of_birth">Date of Birth</string>
    <string name="DoB">DoB</string>
    <string name="make">Make</string>
    <string name="size">Size</string>
    <string name="parent_guardian">Parent / Guardian</string>
    <string name="entry_details">Entry details</string>
    <string name="machine_details">Machine details</string>
    <string name="rider_details">Rider details</string>
    <string name="course">Course
    </string>
</resources>